syntax = "proto3";

package bazel_template.proto;

enum ErrCode {
  SUCCESS = 0;
  FAST_FAIL = 1;
  FAIL = 2;
}
